--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,19 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+	<link href="./reset.css" rel="stylesheet" />
+	<link href="./index.css" rel="stylesheet" />
+
+	<title>Document</title>
+</head>
+<body>
+	<header></header>
+	<div id="left"></div>
+	<div id="right"></div>
+	<footer></footer>
+</body>
+</html>
