--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,26 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+	<link href="./../first/reset.css" rel="stylesheet" />
+	<link href="./index.css" rel="stylesheet" />
+
+	<title>Document</title>
+</head>
+<body>
+	<header>
+		<div id="purple"></div>
+		<div id='green'></div>
+		<div id="blue"></div>
+	</header>
+
+	<div id="dotted">
+		<div id="shadow"></div>
+	</div>
+
+	<footer>H E L L O<br/>F R I E N D S</footer>
+</body>
+</html>
